src/graph/snapshots/hopr_api__graph__function__tests__forward_over_a_forward_shaped_path.snap
---
source: src/graph/function.rs
expression: "PathCost { direction, after_first_edge, after_last_edge, }"
---
direction: forward
after_first_edge: 0.855
after_last_edge: 0.4275
